# tauri-tausly-player

./: README.md  package-lock.json  package.json  test.tausly
src/: dummy.html  main.html  main.js  splash.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
