[package]
name = "tausly-player"
version = "0.1.5"
description = "A Tauri App"
authors = ["melektaus"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }
reqwest = "*"
tokio = { version = "1", features = ["full"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
winreg = "*"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
